--- a/boards.html
+++ b/boards.html
@@ -22,7 +22,9 @@
         </ol>
         <br>
         <br>
-        <button class="lgbutton"onclick="goLandingPage()">Goto index.html</button>
-        <button class="lgbutton" onclick="goUATSpace();">Go to UATSpace</button>
+        <button class="lgButton"onclick="goLandingPage()">Goto index.html</button>
+        <br>
+        <br>
+        <button class="lgButton" onclick="goUATSpace();">Go to UATSpace</button>
     </body>
 </html>
