--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <img src="meme.jpg">
     <br>
     <br>
-    <button class="lgbutton" onclick="goUATSpace();">Go to UATSpace</button>
+    <button class="lgButton" onclick="goUATSpace();">Go to UATSpace</button>
     <br>
     <br>
-    <button class="lgbutton" onclick="goBoards();">Go to Boards</button>
+    <button class="lgButton" onclick="goBoards();">Go to Boards</button>
 </body>
 
 </html>
