--- a/UAT Space Page.html
+++ b/UAT Space Page.html
@@ -150,10 +150,10 @@ week 1 assignment,Launching your UAT Space Program HTML Document Tags -->
     <button class = "button" onclick="displayFall();">display fall</button>
     <br>
     <br>
-    <button class="lgbutton"onclick="goLandingPage()">Goto index.html</button>
+    <button class="lgButton"onclick="goLandingPage()">Goto index.html</button>
     <br>
     <br>
-    <button class="lgbutton" onclick="goBoards();">Go to Boards</button>
+    <button class="lgButton" onclick="goBoards();">Go to Boards</button>
 </body>
 
 
