--- a/UAT Space Page.html
+++ b/UAT Space Page.html
@@ -78,6 +78,19 @@ week 1 assignment,Launching your UAT Space Program HTML Document Tags -->
 
 
 <body>
+    <div class="navbar">
+        <a href="index.html">Index</a>
+        <a href="boards.html">Boards</a>
+        <div class="dropdown">
+            <button class="dropbtn">Space Pages</button>
+            <i class="fa fa-caret-down"></i>
+            <div class="dropdown-content">
+                <a href="login.html">Login</a>
+                <a href="UAT Space Page.html">UAT Space page</a>
+            </div>
+        </div>
+      
+    </div>
     <table>
         <td><img src="UATspacelogo-1.jpg"></td>
         <td> <h1>
@@ -150,10 +163,9 @@ week 1 assignment,Launching your UAT Space Program HTML Document Tags -->
     <button class = "button" onclick="displayFall();">display fall</button>
     <br>
     <br>
-    <button class="lgButton"onclick="goLandingPage()">Goto index.html</button>
+  
     <br>
-    <br>
-    <button class="lgButton" onclick="goBoards();">Go to Boards</button>
+   
 </body>
 
 
