--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     </title>
 </head>
 <body>
+    <div class="navbar">
+        <a href="index.html">Index</a>
+        <a href="boards.html">Boards</a>
+        <div class="dropdown">
+            <button class="dropbtn">Space Pages</button>
+            <i class="fa fa-caret-down"></i>
+            <div class="dropdown-content">
+                <a href="login.html">Login</a>
+                <a href="UAT Space Page.html">UAT Space page</a>
+            </div>
+        </div>
+      
+    </div>
     <h1>
         Welcome to Dylan Drake's Website 
     </h1>
@@ -16,10 +29,10 @@
     <img src="meme.jpg">
     <br>
     <br>
-    <button class="lgButton" onclick="goUATSpace();">Go to UATSpace</button>
+   
     <br>
     <br>
-    <button class="lgButton" onclick="goBoards();">Go to Boards</button>
+   
 </body>
 
 </html>
