--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html>
   <head> 
       <script src="Logincode.js"></script>
+      <link rel="stylesheet" href="loginStyle.css">
 <title>
     UAT Space page login
 </title>
@@ -9,6 +10,19 @@
 
 
   <body>
+    <div class="navbar">
+      <a href="index.html">Index</a>
+      <a href="boards.html">Boards</a>
+      <div class="dropdown">
+          <button class="dropbtn">Space Pages</button>
+          <i class="fa fa-caret-down"></i>
+          <div class="dropdown-content">
+              <a href="login.html">Login</a>
+              <a href="UAT Space Page.html">UAT Space page</a>
+          </div>
+      </div>
+    
+  </div>
 <h1>
     Welcome to UATSpace Page,<br> Please log in...
 </h1>
